test/errors/lexer_error.vole
// Test: Lexer error - unexpected character
// Expected error: E0001 unexpected character '@'

func main() {
    let x = @
}
